--- a/src/Components/TaskCard/TaskCard.module.css
+++ b/src/Components/TaskCard/TaskCard.module.css
@@ -8,7 +8,7 @@
 }
 
 .task_text {
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 600;
     margin-bottom: 15px;
 }
@@ -23,6 +23,8 @@
     display: flex;
     align-items :center;
     justify-content: center;
+    font-weight: 200;
+    font-size: 14px;
 }
 
 .task_delete{
