--- a/src/Components/TaskForm/TaskForm.module.css
+++ b/src/Components/TaskForm/TaskForm.module.css
@@ -1,4 +1,3 @@
-
 .app_header{
     display: flex;
     justify-content: center;
@@ -15,8 +14,15 @@
     border: 1px solid #dfe3e6;
     border-radius: 5px;
     padding: 8px 12px;
-    margin-bottom: 15px;
+    margin-bottom: 14px;
     width: 100%;
+}
+
+.error{
+    color: red;
+    Font-size: 14px ;
+    position: relative;
+    bottom: 5px;
 }
 
 .app_header > form{
