--- a/src/Components/TaskCard/TaskCard.module.css
+++ b/src/Components/TaskCard/TaskCard.module.css
@@ -11,6 +11,8 @@
   font-size: 20px;
   font-weight: 600;
   margin-bottom: 15px;
+  display: flex;
+  justify-content: space-between;
 }
 
 .task_card_bottom {
@@ -27,6 +29,8 @@
   overflow: hidden;
   text-overflow: ellipsis;
   width: 80%;
+  font-weight: 400;
+  
 }
 
 .task_delete {
@@ -41,4 +45,10 @@
 
 .task_delete :hover {
   background-color: #ebebeb;
+}
+
+.task_date{
+  display: flex;
+  font-size: 12px;
+  color: rgb(145, 145, 145);
 }
