--- a/src/Components/TaskForm/TaskForm.module.css
+++ b/src/Components/TaskForm/TaskForm.module.css
@@ -33,12 +33,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 10px;
 }
 
 .task_description{
-    width: 250%;
+    width: 100%;
     height: 36px;
-    padding: 12px 20px;
+    flex: 1;
+    padding: 7px 20px;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -69,4 +71,22 @@
     margin-left: 10px;
     border: none;
     cursor: pointer;
+}
+
+.task_date{
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    align-items: center;
+}
+.task_date_holder{
+    width: 100%;
+    flex: 1;
+    height: 36px;
+    padding: 7px 20px;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    background-color: #f8f8f8;
+    font-size: 13px;
 }
