--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,19 @@
   margin: 20px
 
 }
+
+@media (max-width: 480px) {
+  .app_main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-left: 10px;
+  }
+
+  .task_column {
+    width: 100%;
+    margin: 10px 0;
+  }
+}
